tests/base/invalid/MethodCall_CompileFail_3.whiley
import * from whiley.lang.*

void ::main(System sys,[string] this):
    this.f(1)
